# Friday_Potts

./: .env.example  .gitignore  README.md  agent_friday.py  app.py  hud.py  package.json  pyproject.toml  setup_jarvis_voice.py
friday/tools/: __init__.py  lights.py  macos.py  network.py  system.py  tickets.py  utils.py  web.py
next-app/: .env.local.example  package.json
next-app/app/: globals.css  page.tsx
next-app/components/: SplineOrb.tsx
next-app/components/ui/: ai-prompt-box.tsx
static/: index.html
