[project]
name = "friday-tony-stark-demo"
version = "0.1.0"
description = "Friday — A Tony Stark-inspired MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.111",
    "fastmcp",
    "httpx",
    "livekit-agents[deepgram,groq,openai,sarvam,silero]>=1.5.1",
    "livekit-plugins-elevenlabs>=1.5.1",
    "livekit-plugins-google>=1.5.1",
    "python-dotenv",
    "python-multipart",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
friday = "server:main"
friday_voice = "agent_friday:dev"
hud = "hud:main"
jarvis = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py", "friday", "app.py", "hud.py", "agent_friday.py"]
